k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-reader
  labels:
    name: code-reader
